Implementata funzione di ricerca

--- a/Tranqueerity/src/main/index.html
+++ b/Tranqueerity/src/main/index.html
@@ -16,7 +16,9 @@
         <div class="searchbar-container">
             <div class="search-bar">
                 <div class="search-icon">
+                    <button id="search-btn" type="submit" onclick="searchPlace()">
                     <img src="img/Search.png" alt="Search Icon" class="search-icon">
+                    </button>
                 </div>
                 <span class="search-text">
                     <label>
@@ -78,5 +80,6 @@
     </div>
 </div>
 <script src="scripts/index.js"></script>
+<script src="scripts/searchFunction.js"></script>
 </body>
 </html>
