--- a/Tranqueerity/src/main/dummyPosizione.html
+++ b/Tranqueerity/src/main/dummyPosizione.html
@@ -25,16 +25,10 @@
     </div>
 
     <script>
-      setTimeout(redirect,3000);
-
-      function redirect(){
-
-          document.querySelector('#1').style.display = "none";
-          document.querySelector('#2').style.display = "none";
-
-          console.log("Redirezione in corso");
-          window.location.href="index.html";
-      }
+        setTimeout(() => {
+            console.log("Redirezione in corso");
+            window.location.href = "index.html"; // torna alla home
+        }, 3000);
     </script>
 </body>
 </html>
