--- a/Tranqueerity/src/main/aggiuntaLuogo.html
+++ b/Tranqueerity/src/main/aggiuntaLuogo.html
@@ -79,7 +79,7 @@
         </form>
     </div>
     <div class="add">
-        <button type="submit" class="add-icon"><img src="img/Plus.png" alt="Aggiungi" class="add-icon"></button>
+        <button type="submit" onclick="addPlace()" class="add-icon"><img src="img/Plus.png" alt="Aggiungi" class="add-icon"></button>
     </div>
 </div>
 
