Fix visualizzazione stelline

--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -62,12 +62,12 @@
                 <div class="profile">Profilo 1</div>
                 <div class="review">Recensione 1
                     <img src="img/AlertCircle.png" class="report-button" onclick="report()">
-                    <div class="rating-review">
-                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    <div class="rating">
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
                     </div>
                 </div>
             </div>
@@ -75,12 +75,12 @@
                 <div class="profile">Profilo 2</div>
                 <div class="review">Recensione 2
                     <img src="img/AlertCircle.png" class="report-button" onclick="report()">
-                    <div class="rating-review">
-                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    <div class="rating">
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
                     </div>
                 </div>
             </div>
@@ -88,12 +88,12 @@
                 <div class="profile">Profilo 3</div>
                 <div class="review">Recensione 3
                     <img src="img/AlertCircle.png" class="report-button" onclick="report()">
-                    <div class="rating-review">
-                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    <div class="rating">
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
+                        <span class="star filled">★</span>
                     </div>
                 </div>
             </div>
@@ -172,6 +172,7 @@
                 selected = idx + 1;
                 highlightStars(selected);
                 console.log("Hai votato:", selected);
+                localStorage.setItem("reviewStars", selected);
             });
         });
 
