modifica della visualizzazione degli eventi

--- a/Tranqueerity/src/main/nuovoEvento.html
+++ b/Tranqueerity/src/main/nuovoEvento.html
@@ -18,6 +18,7 @@
   <div class="card-event">
   <form id="event-form">
     <textarea id="nomeEvento" placeholder="Nome evento"></textarea>
+    <textarea id="luogoEvento" placeholder="Luogo per l'evento"></textarea>
     <textarea id="orarioEvento" placeholder="23:59"></textarea>
     <textarea id="descrizioneEvento" placeholder="Descrizione" class="textarea-description"></textarea>
   </form>
