--- a/Tranqueerity/src/main/visualizzaEventi.html
+++ b/Tranqueerity/src/main/visualizzaEventi.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tranqueerity</title>
     <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/event.css">
 </head>
 <body>
 <div class="container">
