--- a/Tranqueerity/src/main/visualizzaEventi.html
+++ b/Tranqueerity/src/main/visualizzaEventi.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tranqueerity</title>
-    <link rel="stylesheet" href="style/styles.css">
     <link rel="stylesheet" href="style/event.css">
+    <link rel="stylesheet" href="style/styles.css">
+
 </head>
 <body>
 <div class="container">
     <header>
+
+        <button class="icon-button top-left" onclick="window.location.href='index.html'" style="cursor:pointer">
+            <img src="./img/Arrow%20left.png" alt="Back" class="icon-img">
+        </button>
+
         <div class="logo-container">
             <a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a>
             <a href="index.html"><h1 class="title">Tranqueerity</h1></a>
@@ -67,9 +73,6 @@
     <!--<div class="fab">
         <div class="fab-icon"></div>
     </div>-->
-    <div class="add" onclick="window.location.href='aggiuntaLuogo.html'" style="cursor: pointer;">
-        <img src="img/Plus.png" alt="Aggiungi" class="add-icon">
-    </div>
 </div>
 <div id="custom-modal" class="modal hidden">
     <div class="modal-content">
