-Fixato il sistema di report delle recensioni -Aggiunta immagine stock a visualizzaRecensioni.html -Piccola aggiunta al README

--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -18,7 +18,7 @@
 
         <!-- Immagine -->
         <div class="img-container">
-            <img class="image" src="https://placehold.co/430x228" alt="Luogo" />
+            <img class="image" src="img/fotoRecensione.webp" alt="Luogo" />
         </div>
 
         <!-- Titolo e Indirizzo -->
